--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,20 @@
 h1 {
   font-family: monospace;
+  align-content: center;
+}
+
+h2 {
+  font-size: 16px;
 }
 
 p {
   margin: 10px;
+}
+
+#p-left {
+  float: left;
+}
+
+#p-right {
+  float: right;
 }
