--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
+body {
+  width: auto;
+}
+
 #content {
   margin: auto;
 }
 
 h1 {
   font-family: monospace;
+  background: linear-gradient(90deg, #ccffff, #ffcccc);
 }
 
 h2 {
@@ -11,15 +16,15 @@ h2 {
 }
 
 p {
-  margin: 10px;
+  padding: 1em;
 }
 
 #p-left {
   float: left;
-  margin: 5px;
+  margin: 0.25em;
 }
 
 #p-right {
   float: right;
-  margin: 5px;
+  margin: 0.25em;
 }
