--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .body {
-  width: auto;
+  width: 700px;
 }
 
 #content {
@@ -9,22 +9,40 @@
 #siteTitle {
   font-family: monospace;
   background: linear-gradient(90deg, #ccffff, #ffcccc);
+  text-align: center;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 250px;
+  height: auto;
 }
 
 #secondHeader {
-  font-size: 8px;
+  font-size: 24px;
+  font-weight: lighter;
+  text-align: center;
 }
 
-p {
-  padding: 1em;
+form {
+  margin: auto;
+  width: 250px;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 #p-left {
   float: left;
-  margin: 0.25em;
+  margin: 10px;
+
 }
 
 #p-right {
   float: right;
-  margin: 0.25em;
+  margin: 10px;
+
 }
